// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxTableDataCell customize 1`] = `
<table>
  <tbody>
    <tr>
      <td
        class="info align-middle active bazinga"
      >
        Test
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`loads and displays CxTableDataCell component 1`] = `
<table>
  <tbody>
    <tr>
      <td />
    </tr>
  </tbody>
</table>
`;
